# control-center

./: App.tsx  BUILD.bazel  README.md  jest.config.json  mkdocs.yml  package-lock.json  package.json  package.json.local
api/controllers/: ResetKeyController.tsx
auth/components/: LoginForm.tsx
auth/controllers/: LoginController.tsx  LogoutController.tsx  SessionPickupController.tsx
auth/mappers/: UserMapper.ts
auth/models/: User.ts  UserLevel.ts
auth/services/: AuthorizationService.ts  PermissionsService.ts  PresetService.ts  UserStateService.ts
breadcrumbs/mappers/: ProfileMapper.ts  ProjectMapper.ts  ReportMapper.ts  SlotMapper.ts
breadcrumbs/models/: Breadcrumb.ts  Profile.ts  Project.ts  Report.ts  Slot.ts
breadcrumbs/services/: BreadcrumbCachingService.ts  BreadcrumbRepository.ts
breadcrumbs/utils/: BreadcrumbFactory.ts
common/enums/: OrganizationIntegration.ts  ProfileType.ts  Ruleset.ts  TraceType.ts
common/higher-order-components/: with-launchdarkly.tsx  with-router.tsx  with-shared-providers.tsx  with-theme-provider.tsx
common/types/: extensions.d.ts  number-extensions.ts  pagination.ts
common/utils/: DateUtils.ts
cypress/: BUILD.bazel  BUILD.bzl  cypress-reporter.config.json  cypress.config.ts
cypress/e2e/: test_example.cy.ts
cypress/e2e/controllers/: LoginController.cy.ts
cypress/utils/: interceptors.ts  localStorage.ts  responses.ts
docs/: intro.md  onboarding.md
docs/development-guidelines/: feature-development-process.md  feature-flags.md  general-guidelines.md  running-a-bug-bash.md
docs/technical-documentation/: authentication.md  data-grid.md  foundation.md  intro.md  navigation-in-cs.md
public/: index.html
public/assets/: manifest.json
